--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
     </style>
 </head>
 <body>
-    <a href="https://https://herman9339.github.io//Expo-growth-software/projects/Myavatar-photo%20grouping%203.0/index.html">Go to My Avatar Photo Grouping 3.0 Webapp</a>
+    <a href="https://herman9339.github.io//Expo-growth-software/projects/Myavatar-photo%20grouping%203.0/index.html">Go to My Avatar Photo Grouping 3.0 Webapp</a>
 </body>
 </html>
