--- a/projects/Myavatar-photo grouping 3.0/index.html
+++ b/projects/Myavatar-photo grouping 3.0/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../Shared/styles/common.css">
+  <link rel="stylesheet" href="../Shared/libraries/common.css">
 
   <link rel="stylesheet" href="styles.css">
 
