--- a/projects/Myavatar-photo grouping 3.0/index.html
+++ b/projects/Myavatar-photo grouping 3.0/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../../Shared/style/commonstyle.css">
+  <link rel="stylesheet" href="../../Shared/styles/common.css">
 
   <link rel="stylesheet" href="styles.css">
 
@@ -150,7 +150,7 @@
     <!-- Copy the content of footer.html here -->
   </footer>
 
-  <script src="../../Shared/library/customlibrary.js"></script>
+  <script src="../../Shared/libraries/customLibrary.js"></script>
   <script src="main.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.7.1/jszip.min.js"></script>
 
