--- a/projects/Myavatar-photo grouping 3.0/index.html
+++ b/projects/Myavatar-photo grouping 3.0/index.html
@@ -15,7 +15,7 @@
 <body>
   <header>
     <!-- Copy the content of header.html here -->
-    <h3>Myavatar-photo grouping 3.0</h3>
+    <h3>Myavatar-photo grouping 3.0 1</h3>
   </header>
 
   <div class="Main-control">
