--- a/projects/Myavatar-photo grouping 3.0/index.html
+++ b/projects/Myavatar-photo grouping 3.0/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../../Shared/styles/common.css">
   <link rel="stylesheet" href="styles.css">
-
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
   <title>Myavatar Download and grouping Web App</title>
 </head>
