Revert "Update index.html"
This reverts commit 99d721ad97d2cf9013a70b18e36a4881a060653a.

--- a/projects/Myavatar-photo grouping 3.0/index.html
+++ b/projects/Myavatar-photo grouping 3.0/index.html
@@ -145,7 +145,7 @@
       </div>
     </div>
     <!-- user guide pop up starts-->
-    <div id="popUpWindow" class="modal" display = "none">
+    <div id="popUpWindow" class="modal" display: "none">
       <div class="modal-content">
         <div class="ModelTopSection">
           <span class="close">&times;</span>
